--- a/configure.ac
+++ b/configure.ac
@@ -6,11 +6,40 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AM_CONFIG_HEADER(config.h)
 AC_CONFIG_MACRO_DIR([m4])
 
+# enable nice build output on automake1.11
+m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
+
 AC_PROG_CC
 AC_PROG_INSTALL
-AC_ISC_POSIX
-AC_HEADER_STDC
+AM_PROG_LIBTOOL
 AM_PROG_CC_C_O
+IT_PROG_INTLTOOL([0.35.0])
+
+GNOME_COMPILE_WARNINGS
+GNOME_DOC_INIT
+
+# set up gtk-doc
+GTK_DOC_CHECK(1.9)
+
+dnl ---------------------------------------------------------------------------
+dnl - Use strict options (default enabled for devs, disabled in releases)
+dnl ---------------------------------------------------------------------------
+
+dnl if .git directory is present, considering we are working in the repository
+if test -d ".git"; then
+	default_strict=yes
+else
+	default_strict=no
+fi
+
+AC_ARG_ENABLE(strict, AC_HELP_STRING([--enable-strict],
+					[Enable strict compilation options]), enable_strict=$enableval,
+					enable_strict=$default_strict)
+if test x$enable_strict != xno; then
+	if test "$GCC" = "yes"; then
+		CPPFLAGS="$CPPFLAGS -Werror"
+	fi
+fi
 
 dnl ---------------------------------------------------------------------------
 dnl - Extra verbose warning switches
@@ -54,6 +83,15 @@ fi
 AC_SUBST(WARNINGFLAGS_C)
 
 dnl ---------------------------------------------------------------------------
+dnl - gettext stuff
+dnl ---------------------------------------------------------------------------
+GETTEXT_PACKAGE=AC_PACKAGE_NAME
+AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE(GETTEXT_PACKAGE, "AC_PACKAGE_NAME", [foo])
+
+AM_GLIB_GNU_GETTEXT
+
+dnl ---------------------------------------------------------------------------
 dnl - Library dependencies
 dnl ---------------------------------------------------------------------------
 GLIB_REQUIRED=2.14.0
@@ -81,12 +119,14 @@ dnl ---------------------------------------------------------------------------
 AC_OUTPUT([
 Makefile
 src/Makefile
+data/Makefile
+po/Makefile.in
 ])
 
 dnl ==========================================================================
 echo "
-                    GFT $VERSION
-                  =============
+                    gnome-color-manager $VERSION
+                  ================================
 
         prefix:                    ${prefix}
         datadir:                   ${datadir}
