--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,6 +1,7 @@
 @INTLTOOL_DESKTOP_RULE@
 desktopdir = $(datadir)/applications
 desktop_in_files =					\
+	gcm-prefs.desktop.in				\
 	gcm-import.desktop.in
 
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
