--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 data/gcm-import.desktop.in
 data/gcm-prefs.ui
-data/gpk-prefs.desktop.in
+data/gcm-prefs.desktop.in
+data/gnome-color-manager.schemas.in
 src/gcm-import.c
 src/gcm-prefs.c
 
