--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -42,7 +42,9 @@ make %{?_smp_mflags}
 
 %install
 rm -rf $RPM_BUILD_ROOT
+export GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1
 make install DESTDIR=$RPM_BUILD_ROOT
+unset GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL
 
 for i in gcm-prefs gcm-import ; do
   desktop-file-install --delete-original                                \
@@ -57,8 +59,29 @@ rm -rf $RPM_BUILD_ROOT
 
 %post
 export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
+gconftool-2 --makefile-install-rule \
+        %{_sysconfdir}/gconf/schemas/gnome-packagekit.schemas >/dev/null || :
+scrollkeeper-update -q &> /dev/null || :
+touch --no-create %{_datadir}/icons/hicolor
+if [ -x /usr/bin/gtk-update-icon-cache ]; then
+    gtk-update-icon-cache -q %{_datadir}/icons/hicolor &> /dev/null || :
+fi
 update-desktop-database %{_datadir}/applications &> /dev/null || :
 update-mime-database %{_datadir}/mime &> /dev/null || :
+
+%pre
+if [ "$1" -gt 1 ]; then
+    export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
+    gconftool-2 --makefile-uninstall-rule \
+      %{_sysconfdir}/gconf/schemas/gnome-packagekit.schemas &> /dev/null || :
+fi
+
+%preun
+if [ "$1" -eq 0 ]; then
+    export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
+    gconftool-2 --makefile-uninstall-rule \
+      %{_sysconfdir}/gconf/schemas/gnome-packagekit.schemas &> /dev/null || :
+fi
 
 %postun
 update-desktop-database %{_datadir}/applications &> /dev/null || :
@@ -76,6 +99,7 @@ update-mime-database %{_datadir}/mime &> /dev/null || :
 #%{_datadir}/man/man1/*.1.gz
 #%{_datadir}/gnome/help/gnome-color-manager
 #%{_datadir}/omf/gnome-color-manager
+%config(noreplace) %{_sysconfdir}/gconf/schemas/*.schemas
 %{_datadir}/applications/gcm-prefs.desktop
 %{_datadir}/applications/gcm-import.desktop
 
