--- a/data/gcm-prefs.desktop.in
+++ b/data/gcm-prefs.desktop.in
@@ -7,6 +7,8 @@ Icon=video-display
 Exec=gcm-prefs
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;System;Settings;
+Categories=Settings;X-GNOME-SystemSettings;
 StartupNotify=true
-
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=gnome-color-manager
+X-GNOME-Bugzilla-Component=gnome-color-manager
