Add a VTE dep for the new calibration stuff that is coming

--- a/configure.ac
+++ b/configure.ac
@@ -98,6 +98,7 @@ GTK_REQUIRED=2.14.0
 GNOMEDESKTOP_REQUIRED=2.14.0
 GCONF_REQUIRED=0.22
 UNIQUE_REQUIRED=1.0.0
+VTE_REQUIRED=0.22.2
 
 dnl ---------------------------------------------------------------------------
 dnl - Check library dependencies
@@ -122,6 +123,10 @@ AC_SUBST(GCONF_LIBS)
 PKG_CHECK_MODULES(UNIQUE, unique-1.0 >= $UNIQUE_REQUIRED)
 AC_SUBST(UNIQUE_CFLAGS)
 AC_SUBST(UNIQUE_LIBS)
+
+PKG_CHECK_MODULES(VTE, vte >= $VTE_REQUIRED)
+AC_SUBST(VTE_CFLAGS)
+AC_SUBST(VTE_LIBS)
 
 AC_PATH_PROG(GCONFTOOL, gconftool-2)
 AM_GCONF_SOURCE_2
