--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,9 @@
+data/gcm-calibrate.ui
 data/gcm-import.desktop.in
-data/gcm-prefs.ui
 data/gcm-prefs.desktop.in
+data/gcm-prefs.ui
 data/gnome-color-manager.schemas.in
+src/gcm-calibrate.c
 src/gcm-import.c
 src/gcm-prefs.c
 src/gcm-utils.c
