--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,7 @@
-data/gcm-calibrate.ui
+[type: gettext/glade]data/gcm-calibrate.ui
 data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
-data/gcm-prefs.ui
+[type: gettext/glade]data/gcm-prefs.ui
 data/gnome-color-manager.schemas.in
 src/gcm-calibrate.c
 src/gcm-import.c
