--- a/data/gcm-prefs.desktop.in
+++ b/data/gcm-prefs.desktop.in
@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Color Profiles
 _GenericName=Color Profiles
 _Comment=Manage ICC color profiles
-Icon=video-display
+Icon=gnome-color-manager
 Exec=gcm-prefs
 Terminal=false
 Type=Application
