--- a/configure.ac
+++ b/configure.ac
@@ -139,6 +139,13 @@ Makefile
 src/Makefile
 data/Makefile
 data/profiles/Makefile
+data/icons/Makefile
+data/icons/16x16/Makefile
+data/icons/22x22/Makefile
+data/icons/24x24/Makefile
+data/icons/32x32/Makefile
+data/icons/48x48/Makefile
+data/icons/scalable/Makefile
 po/Makefile.in
 ])
 
