Add a proper help file, although it needs some grammar fixes

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -106,7 +106,7 @@ update-mime-database %{_datadir}/mime &> /dev/null || :
 %{_datadir}/gnome-color-manager/profiles/*.ic?
 %{_datadir}/gnome-color-manager/gcm-*.ui
 #%{_datadir}/man/man1/*.1.gz
-#%{_datadir}/gnome/help/gnome-color-manager
+%{_datadir}/gnome/help/gnome-color-manager
 #%{_datadir}/omf/gnome-color-manager
 %{_datadir}/icons/hicolor/*/*/*.png
 %{_datadir}/icons/hicolor/scalable/*/*.svg*
