--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -105,7 +105,7 @@ update-mime-database %{_datadir}/mime &> /dev/null || :
 %dir %{_datadir}/gnome-color-manager/profiles
 %{_datadir}/gnome-color-manager/profiles/*.ic?
 %{_datadir}/gnome-color-manager/gcm-*.ui
-#%{_datadir}/man/man1/*.1.gz
+%{_datadir}/man/man1/*.1.gz
 %{_datadir}/gnome/help/gnome-color-manager
 #%{_datadir}/omf/gnome-color-manager
 %{_datadir}/icons/hicolor/*/*/*.png
