--- a/data/gcm-import.desktop.in
+++ b/data/gcm-import.desktop.in
@@ -7,7 +7,7 @@ Categories=System;X-Red-Hat-Base;X-Fedora;
 Exec=/usr/bin/gcm-import %F
 Terminal=false
 Type=Application
-Icon=gnome-color-manager
+Icon=application-vnd.iccprofile
 StartupNotify=true
 NoDisplay=true
 MimeType=application/vnd.iccprofile;
