--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,4 +1,5 @@
 [type: gettext/glade]data/gcm-calibrate.ui
+data/gcm-apply.desktop.in
 data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
 [type: gettext/glade]data/gcm-prefs.ui
