String review as requested

--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -13,7 +13,7 @@
           Gamma is adjusted to affect the color of the attached monitor.
           Traditionally Linux has used a gamma value of 1.0, but this makes monitors look washed out compared Windows XP or OSX.
           Apple traditionally used a value of 1.8 for a long time, but now use the same value as Microsoft.
-          Microsoft has always used a value 2.2</long>
+          Microsoft has always used a value of 2.2.</long>
       </locale>
     </schema>
 
