Only make the calibrate button sensitive when supported hardware devices are attached
This requires a fixed ArgyllCMS, but the patch is pending review

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -38,6 +38,7 @@ BuildRequires: vte-devel
 BuildRequires: gnome-doc-utils
 BuildRequires: unique-devel >= %{unique_version}
 BuildRequires: intltool
+BuildRequires: libgudev1-devel
 
 %description
 gnome-color-manager provides a way to control ICC colour profiles.
