Add a tiny little utility program to check the value of _ICC_PROFILE stored on the root window

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,6 +5,7 @@ data/gcm-prefs.desktop.in
 [type: gettext/glade]data/gcm-prefs.ui
 data/gnome-color-manager.schemas.in
 src/gcm-calibrate.c
+src/gcm-inspect.c
 src/gcm-import.c
 src/gcm-prefs.c
 src/gcm-utils.c
