Add a dbus-glib buildrequire for the new brightness stuff that's coming

--- a/configure.ac
+++ b/configure.ac
@@ -99,6 +99,7 @@ GNOMEDESKTOP_REQUIRED=2.14.0
 GCONF_REQUIRED=0.22
 UNIQUE_REQUIRED=1.0.0
 VTE_REQUIRED=0.22.2
+DBUS_GLIB_REQUIRED=0.73
 
 dnl ---------------------------------------------------------------------------
 dnl - Check library dependencies
@@ -131,6 +132,10 @@ AC_SUBST(VTE_LIBS)
 PKG_CHECK_MODULES(GUDEV, gudev-1.0)
 AC_SUBST(GUDEV_CFLAGS)
 AC_SUBST(GUDEV_LIBS)
+
+PKG_CHECK_MODULES(DBUS_GLIB, dbus-glib-1 >= $DBUS_GLIB_REQUIRED)
+AC_SUBST(DBUS_GLIB_CFLAGS)
+AC_SUBST(DBUS_GLIB_LIBS)
 
 AC_PATH_PROG(GCONFTOOL, gconftool-2)
 AM_GCONF_SOURCE_2
