Fallback to the per-screen methods for xorg drivers that do not support Xrandr 1.3

--- a/configure.ac
+++ b/configure.ac
@@ -108,6 +108,10 @@ PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 gthread-2.0)
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
+PKG_CHECK_MODULES(XORG, xxf86vm xrandr)
+AC_SUBST(XORG_CFLAGS)
+AC_SUBST(XORG_LIBS)
+
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= $GTK_REQUIRED)
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
