--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -43,6 +43,8 @@ BuildRequires: unique-devel >= %{unique_version}
 BuildRequires: intltool
 BuildRequires: libgudev1-devel
 BuildRequires: dbus-glib-devel >= %{dbus_glib_version}
+BuildRequires: libXxf86vm-devel
+BuildRequires: libXrandr-devel
 
 %description
 gnome-color-manager provides a way to control ICC colour profiles.
