--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -12,13 +12,19 @@ desktopdir = $(datadir)/applications
 desktop_in_files =					\
 	gcm-prefs.desktop.in				\
 	gcm-import.desktop.in
-
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 
 @INTLTOOL_DESKTOP_RULE@
 autostartdir = $(sysconfdir)/xdg/autostart
 autostart_in_files = gcm-apply.desktop.in
 autostart_DATA = $(autostart_in_files:.desktop.in=.desktop)
+
+servicedir       = $(datadir)/dbus-1/services
+service_in_files = org.gnome.ColorManager.service.in
+service_DATA     = $(service_in_files:.service.in=.service)
+
+$(service_DATA): $(service_in_files) Makefile
+	@sed -e "s|\@servicedir\@|$(bindir)|" $< > $@
 
 pkgdata_DATA =						\
 	gcm-calibrate.ui				\
