Fix the scanner and camera calibration to work correctly

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -45,6 +45,7 @@ BuildRequires: libgudev1-devel
 BuildRequires: dbus-glib-devel >= %{dbus_glib_version}
 BuildRequires: libXxf86vm-devel
 BuildRequires: libXrandr-devel
+BuildRequires: gnome-desktop-devel
 
 %description
 gnome-color-manager provides a way to control ICC colour profiles.
