Update to a better version of the egg-debug code

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,6 +4,7 @@ data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
 [type: gettext/glade]data/gcm-prefs.ui
 data/gnome-color-manager.schemas.in
+src/egg-debug.c
 src/gcm-calibrate.c
 src/gcm-client.c
 src/gcm-inspect.c
