Add the OutputIntent property to the DBus interface for other applications to consume

--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -41,6 +41,18 @@
       </locale>
     </schema>
 
+    <schema>
+      <key>/schemas/apps/gnome-color-manager/output_intent</key>
+      <applyto>/apps/gnome-color-manager/output_intent</applyto>
+      <owner>gnome-color-manager</owner>
+      <type>string</type>
+      <default>true</default>
+      <locale name="C">
+        <short>The output intent to use, e.g. 'perceptual'.</short>
+        <long>The output intent to use, e.g. 'perceptual'.</long>
+      </locale>
+    </schema>
+
   </schemalist>
 </gconfschemafile>
 
