Add some self tests for parsing the EDID

--- a/configure.ac
+++ b/configure.ac
@@ -203,6 +203,7 @@ help/Makefile
 man/Makefile
 data/Makefile
 data/profiles/Makefile
+data/tests/Makefile
 data/icons/Makefile
 data/icons/16x16/Makefile
 data/icons/22x22/Makefile
