trivial: Add some trivial debugging trying to find a problem

--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -46,7 +46,7 @@
       <applyto>/apps/gnome-color-manager/output_intent</applyto>
       <owner>gnome-color-manager</owner>
       <type>string</type>
-      <default>true</default>
+      <default>perceptual</default>
       <locale name="C">
         <short>The output intent to use, e.g. 'perceptual'.</short>
         <long>The output intent to use, e.g. 'perceptual'.</long>
