Add some unit tests to GcmClut and fix up a small error

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -167,6 +167,7 @@ gcm_self_test_SOURCES =					\
 	gcm-device.c					\
 	gcm-profile.c					\
 	gcm-brightness.c				\
+	gcm-clut.c					\
 	egg-test.h					\
 	egg-test.c					\
 	$(NULL)
